--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
   color: #f5f0e1;
   text-align: center;
   padding: 60px 20px;
+  background-image: url('images/stars.png');
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 .section {
