--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
 body {
   margin: 0;
   font-family: 'Georgia', serif;
-  background-image: url('images/stars.png');
+  background-image: url('stars.png');
   background-repeat: repeat;
   background-size: auto;
   text-align: center;
+  color: #f5f0e1; /* soft off-white */
   padding: 60px 20px;
 }
 
